--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@ html body {
 	height: 100%;
 }
 
+body {
+	position: relative;
+	overflow-y: scroll;
+}
+
+
 /* ////// TOP ///// */
 
 .jumbotron {
@@ -29,17 +35,17 @@ html body {
 	top: 25%;
 }
 
-.jumbotron .scroll-down {
+.jumbotron .row .col-sm-1 {
 	height: 80px;
 	width: 110px;
 	display: block;
 	position: absolute;
 	bottom: 0px;
-	right: 5%;
 	background-color: black;
 	text-align: center;
 	z-index: 5;
 }
+
 
 .jumbotron .scroll-down .glyphicon {
 	color: #FFF;
@@ -65,76 +71,138 @@ html body {
 	}
 }
 
-
 /* ///// NAVBAR ///// */
 
-.navbar {
-	border: 0px;
-	border-radius: 0px;
-	background-color: black;
-	position: absolute;
-	top: 100%;
-	right: 5%;
+
+.col-sm-1 #nav {
 	width: 110px;
-	z-index: 999;
-}
-
-.navbar .navbar-nav {
-	float: none;
-}
-
-.navbar-nav {
-	margin: 0px;
-}
-
-.navbar-default .navbar-nav .active a {
-	background: #e2cf49;
-	color: white;
-}
-
-.navbar .nav li {
-	display: block;
-	float: none;
-	height: 80px;
-}
-
-.navbar .nav li a {
-	display: block;
-	height: 80px;
 	text-align: center;
-	padding-top: 30px;
-	color: white;
+	margin-left: -15px;
+	z-index: 99;
 }
 
-.navbar .navbar-collapse {
-	padding: 0px;
-	max-height: none;
+.nav {
+  background: black;
 }
 
-.fixed .navbar {
-	position: fixed;
-	top: 60px;
+.nav li a {
+  color: white;
+  padding: 32px 0;
+}
+
+.nav li {
+	height: 80px;
+}
+
+.nav li a:hover,
+.nav li a:focus {
+  background: #86c5da;
+}
+
+.nav .active {
+  font-weight: bold;
+  background: #e2cf49;
+}
+
+.nav .nav {
+  display: none;
+}
+
+.nav .active .nav {
+  display: block;
+}
+
+.nav .nav a {
+  font-weight: normal;
+  font-size: .85em;
+}
+
+.nav .nav span {
+  margin: 0;
+}
+
+.nav .nav .active a,
+.nav .nav .active:hover a,
+.nav .nav .active:focus a {
+  font-weight: bold;
+  padding-left: 30px;
+  border-left: 5px solid black;
+}
+
+.nav .nav .active span,
+.nav .nav .active:hover span,
+.nav .nav .active:focus span {
+  display: none;
+}
+
+.application {
+  border-top: 1px solid #c1e1ec;
+}
+
+.affix-top {
+  position: relative;
+}
+
+.affix {
+  top: 60px;
+}
+
+.affix, 
+.affix-bottom {
+    width: 213px;
+}
+
+.affix-bottom {
+  position: absolute;
 }
 
 /* ///// PROFILE ///// */
+
 #profile {
-	padding: 75px 100px;
-	margin: 0 auto;
+	padding: 75px 150px 75px 50px;
 }
 
 #profile h1 {
 	margin-top: 0px;
+	text-align: center;
+}
+
+#profile p {
+	text-align: center;
+}
+
+
+#profile .row .col-md-4 p {
+	text-align: left;
 }
 
 #profile .row .col-md-4 img {
-	width: 250px;
-	height: 250px;
-	border-radius: 125px;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
 	border: 3px solid black;
+}
+
+@media only screen and (max-width: 991px) {
+	#profile .row .col-md-4 {
+		margin: 0 auto;
+	}
+	#profile .row .col-md-4 p {
+		max-width: 400px;
+	}
+	#profile .row .col-md-4 img {
+		height: 250px;
+		width: 250px;
+	}
 }
 
 
 /* ///// EXPERIENCE ///// */
+
+#experience {
+	max-width: 960px;
+	padding: 5% 10%;
+}
 
 #experience h1 {
 	text-align: center;
@@ -148,10 +216,19 @@ html body {
 	padding: 30px 0;
 }
 
+@media only screen and (max-width: 991px) {
+	#experience {
+		max-width: 680px;
+		margin: 0 auto;
+	}
+}
+
 /* ///// SECTION BACKGROUNDS ///// */
 
 .background-white {
 	background-color: white;
+	width: 100%;
+	margin: 0;
 }
 
 .background-neutral {
@@ -162,4 +239,15 @@ html body {
 
 .container {
 	padding: 40px 260px;
+}
+
+.row-centered {
+	text-align: center;
+}
+
+.col-centered {
+	display: inline-block;
+	float: none;
+	text-align: left;
+	margin-right: -4px;
 }
