Updated experience content

--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,11 @@ html body {
 	padding: 30px 0;
 }
 
+.experience ul {
+	padding: 5px;
+	padding-left: 12px;
+}
+
 /* ///// SECTION BACKGROUNDS ///// */
 
 .background-white {
